tests/paczka1/fuzzy1/29262736.err
Error in line 1: bhBAPQH A538 82,5
Error in line 31: GDtYrQ A899 4,9
